--- a/app/src/main/res/layout/activity_profile_picture.xml
+++ b/app/src/main/res/layout/activity_profile_picture.xml
@@ -26,6 +26,14 @@
                 android:scaleType="centerCrop">
 
         </ImageView>
+
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Click image to upload photo"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/profile_card"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
